# the_Spine

./: .gitignore  .spineignore  LICENSE  README.md  _check_weekly_pk_dups.py  _confirm_tier1_1_4.py  _debug_r2_panel_live.json  _inspect_cot.py  _inspect_i2_quarterly_cols.py  _laneC_parquet_report.txt  _laneC_parquet_triage.py  _laneC_parquet_triage.txt  _patch_market_key_type.py  _schema_cot_compare.py  app.js  ca_2y_test.json  check_ir_diff_r2.py  de_2y_test.xml  export_fx_json.py  fx_price_data.json  fx_sigma_data.json  fx_spreads_data.json  index.html  package-lock.json  pyproject.toml  pytest.ini  r2_smoketest.py  rebuild_ir_diff.py  requirements.ci.fed-rate-monitor.lock.txt  requirements.ci.fed-rate-monitor.txt  requirements.ci.lock.txt  requirements.ci.txt  requirements.core.lock.txt  requirements.core.txt  requirements.front2.txt  requirements.heavy.txt  requirements.txt  setup.py  snb_cubes.json  test_r2_upload.py  (+5 more)
the_OracleChambers/: .gitignore  README.md  fed_text_downloader.py  pyproject.toml  requirements.txt
the_OracleChambers/docs/: fedspeak_metadata_schema.md  vinv_tranche2_readme.md
the_OracleChambers/fed_speak/: fed_signals_adapter.py  fusion_fed_speak.py  minutes_engine.py  minutes_lexicon.py  minutes_parser.py  minutes_schema.py  run_minutes_engine.py
the_OracleChambers/scripts/: add_regimes_econ_inflation.py  backfill_fedspeak_meta.py  bootstrap_r2_structure.py  build_fed_block_for_spine.py  build_fed_drift_metrics.py  build_fed_only_macro_state.py  build_geoscen_leaf.py  build_macro_state_spine_us.py  build_macro_state_spine_us_v1.py  (+26 more)
(+2173 files in other folders)
