[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oraclechambers"
version = "0.1.0"
description = "the_OracleChambers: interpretive layer for the_Spine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["oraclechambers*"]
